# rgame

./: .gitignore  Cargo.toml
src/: main.rs
src/components/: core.rs  graphics.rs  mod.rs
src/systems/: acceleration_physics.rs  mod.rs  quit.rs  time.rs  velocity_physics.rs
src/systems/graphics/: mod.rs  sprite_fragment.glsl  sprite_vertex.glsl  sprites.rs
test-data/: Thumbs.db
