[package]
name = "rgame"
version = "0.0.1"
authors = ["Connor Hilarides <connorcpu@live.com>"]

[dependencies]
ecs = "*"

[dependencies.image]
git = "https://github.com/PistonDevelopers/image.git"

[dependencies.time]
git = "https://github.com/rust-lang/time.git"

[dependencies.glium]
git = "https://github.com/tomaka/glium.git"
[dependencies.glium_macros]
git = "https://github.com/tomaka/glium.git"

[dependencies.glutin]
git = "https://github.com/tomaka/glutin.git"
